--- a/app/src/main/res/layout/activity_super_admin_gestion_restaurante.xml
+++ b/app/src/main/res/layout/activity_super_admin_gestion_restaurante.xml
@@ -13,51 +13,36 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <!-- Header -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="12dp"
-            android:gravity="center_vertical">
-            <!-- Logo Foodisea -->
-            <ImageView
-                android:id="@+id/ivLogoFoodisea"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_weight="1"
-                android:contentDescription="@string/app_name"
-                app:srcCompat="@drawable/foodisea" />
-        </LinearLayout>
+            android:padding="12dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="12dp"
-            android:gravity="center_vertical">
-
-            <!-- Botón de regresar (flecha) -->
             <Button
                 android:id="@+id/btnBack"
                 style="?attr/materialIconButtonFilledTonalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/btnBack"
                 app:icon="@drawable/baseline_arrow_back_ios_new_24"
-                app:iconTint="@color/black"
-                android:backgroundTint="@color/bg_color"/>
+                android:contentDescription="@string/btnBack"
+                android:backgroundTint="@color/bg_color"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Gestion de Restaurantes"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                android:fontFamily="@font/sen_font"
-                android:padding="8dp"/>
+                android:text="Gestion de restaurantes"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:fontFamily="@font/sen_font"/>
 
-            <!-- Icono de home -->
             <Button
                 android:id="@+id/btnHome"
                 style="?attr/materialIconButtonFilledStyle"
@@ -65,8 +50,13 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="Home"
                 app:icon="@drawable/ic_home"
-                android:backgroundTint="@color/btn_medium"/>
-        </LinearLayout>
+                android:backgroundTint="@color/btn_medium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <!-- Barra de búsqueda -->
         <androidx.appcompat.widget.SearchView
@@ -75,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
             android:layout_marginHorizontal="16dp"
-            app:queryHint="Buscar Restaurante"
+            app:queryHint="Buscar restaurante"
             app:iconifiedByDefault="false"
             android:background="@drawable/search_view_bg"/>
 
@@ -93,7 +83,7 @@
 
     <!-- FloatingActionButton en la parte inferior izquierda -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnDashboard"
+        android:id="@+id/btnAddRestaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
