--- a/app/src/main/res/layout/activity_super_admin_info_perfil.xml
+++ b/app/src/main/res/layout/activity_super_admin_info_perfil.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/bg_color"
-    tools:context=".activity.cliente.ClienteInfoPerfilActivity">
+    tools:context=".activity.superadmin.SuperAdminInfoPerfilActivity">
 
     <!-- Header -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -87,6 +87,7 @@
             android:textSize="14sp" />
     </LinearLayout>
 
+    <!-- Datos del superamin -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -158,7 +159,7 @@
                 app:tint="@android:color/holo_purple"
                 android:background="@drawable/bg_icon"
                 android:padding="10dp"
-                android:scaleType="fitCenter"/>
+                android:scaleType="centerInside"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -316,6 +317,4 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-
 </LinearLayout>
