--- a/app/src/main/res/layout/activity_super_admin_perfil.xml
+++ b/app/src/main/res/layout/activity_super_admin_perfil.xml
@@ -9,335 +9,133 @@
     android:background="@color/bg_color"
     tools:context=".activity.superadmin.SuperAdminPerfilActivity">
 
-    <!-- Header con botón de regresar y título -->
-    <LinearLayout
+    <!-- Header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
         android:padding="12dp">
 
-        <!-- Botón de regresar (flecha) -->
         <Button
-            style="?attr/materialIconButtonFilledTonalStyle"
             android:id="@+id/btnBack"
+            style="?attr/materialIconButtonFilledTonalStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/baseline_arrow_back_ios_new_24"
             android:contentDescription="@string/btnBack"
-            android:backgroundTint="@color/bg_color"/>
-
+            android:backgroundTint="@color/bg_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Perfil"
-            android:textSize="20sp"
-            android:fontFamily="@font/sen_font">
-        </TextView>
-    </LinearLayout>
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/sen_font"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/ivUserPhoto"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:layout_margin="8dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:padding="16dp">
-
-        <ImageView
-            android:id="@+id/ivUserPhoto"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="@drawable/rounded_background"
-            android:scaleType="centerCrop" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tvUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="John Gomez"
-                android:textColor="#000000"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:fontFamily="@font/sen_font"/>
-
-            <TextView
-                android:id="@+id/tvTypeUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Superadmin de Foodisea"
-                android:textColor="#808080"
-                android:textSize="14sp" />
-        </LinearLayout>
-    </LinearLayout>
-
-
-    <!-- Datos del admin de restaurante -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
-        android:background="@drawable/rounded_background"
-        android:padding="24dp"
-        android:layout_margin="16dp"
-        android:gravity="center_vertical">
-
-        <!-- N° DNI -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingVertical="8dp"
-            android:layout_marginBottom="8dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_profile"
-                android:layout_marginEnd="16dp"
-                app:tint="@android:color/holo_orange_dark"
-                android:background="@drawable/bg_icon"
-                android:padding="8dp"
-                android:scaleType="centerInside"/>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="N° DNI"
-                    android:textSize="14sp"
-                    android:textColor="@android:color/darker_gray"
-                    android:fontFamily="@font/sen_font"/>
-
-                <TextView
-                    android:id="@+id/tvUserDNI"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="12345678"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/sen_font"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <!-- Fecha de nacimiento -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingVertical="8dp"
-            android:layout_marginBottom="8dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_calendar"
-                android:layout_marginEnd="16dp"
-                app:tint="@android:color/holo_purple"
-                android:background="@drawable/bg_icon"
-                android:padding="8dp"
-                android:scaleType="centerInside"/>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fecha de nacimiento"
-                    android:textSize="14sp"
-                    android:textColor="@android:color/darker_gray"
-                    android:fontFamily="@font/sen_font"/>
-
-                <TextView
-                    android:id="@+id/tvUserBirthdate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2001-05-03"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black"
-                    android:fontFamily="@font/sen_font"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <!-- Correo Electrónico -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingVertical="8dp"
-            android:layout_marginBottom="8dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_email"
-                android:layout_marginEnd="16dp"
-                app:tint="@color/gray_dark"
-                android:background="@drawable/bg_icon"
-                android:padding="8dp"
-                android:scaleType="centerInside"/>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Correo electrónico"
-                    android:textSize="14sp"
-                    android:textColor="@android:color/darker_gray"
-                    android:fontFamily="@font/sen_font"/>
-
-                <TextView
-                    android:id="@+id/tvUserMail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="cl001@gmail.com"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black"
-                    android:fontFamily="@font/sen_font"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <!--Teléfono-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingVertical="8dp"
-            android:layout_marginBottom="8dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_call"
-                android:layout_marginEnd="16dp"
-                app:tint="@android:color/holo_blue_dark"
-                android:background="@drawable/bg_icon"
-                android:padding="8dp"
-                android:scaleType="centerInside" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Teléfono"
-                    android:textSize="14sp"
-                    android:textColor="@android:color/darker_gray"
-                    android:fontFamily="@font/sen_font"/>
-
-                <TextView
-                    android:id="@+id/tvUserCell"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="123456789"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/sen_font"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <!--Domicilio-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingVertical="8dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_home"
-                android:layout_marginEnd="16dp"
-                app:tint="@android:color/holo_green_dark"
-                android:background="@drawable/bg_icon"
-                android:padding="8dp"
-                android:scaleType="centerInside" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Domicilio"
-                    android:textSize="14sp"
-                    android:textColor="@android:color/darker_gray"
-                    android:fontFamily="@font/sen_font"/>
-
-                <TextView
-                    android:id="@+id/tvUserAddress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Av 25 de febrero 178"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black"
-                    android:fontFamily="@font/sen_font"/>
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-    <!-- Opción: Cerrar Sesión -->
-    <LinearLayout
-        android:id="@+id/llLogout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="24dp"
-        android:background="@drawable/rounded_background"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/ivLogoutIcon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/ic_logout"
-            android:background="@drawable/bg_icon"
-            android:padding="8dp"
-            android:scaleType="centerInside"/>
+        android:layout_marginBottom="16dp">
 
         <TextView
-            android:id="@+id/tvLogout"
+            android:id="@+id/tvUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="John Gomez"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:fontFamily="@font/sen_font"/>
+
+        <TextView
+            android:id="@+id/tvTypeUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Superadmin de Foodisea"
+            android:textColor="#808080"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <!-- Opción: Información Personal -->
+    <LinearLayout
+        android:id="@+id/llPersonalInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        android:background="@drawable/rounded_background"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="24dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/ivPersonalInfoIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/rounded_person_24"/>
+
+        <TextView
+            android:id="@+id/tvPersonalInfo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Cerrar sesión"
-            android:textSize="18sp"
+            android:layout_marginStart="20dp"
+            android:text="Información personal"
+            android:textSize="16sp"
+            android:fontFamily="@font/sen_font"
+            android:textColor="@color/black"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/ivArrow1"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_arrow_right" />
+    </LinearLayout>
+
+    <!-- Opción: Cambiar contraseña -->
+    <LinearLayout
+        android:id="@+id/llChangePass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        android:background="@drawable/rounded_background"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/ivLockIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_lock"/>
+
+        <TextView
+            android:id="@+id/tvChangePass"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Cambiar contraseña"
+            android:textSize="16sp"
             android:fontFamily="@font/sen_font"
             android:textColor="@color/black"
             android:layout_weight="1" />
@@ -348,5 +146,44 @@
             android:layout_height="24dp"
             android:src="@drawable/ic_arrow_right" />
     </LinearLayout>
+
+    <!-- Opción: Cerrar Sesión -->
+    <LinearLayout
+        android:id="@+id/llLogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        android:background="@drawable/rounded_background"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/ivLogoutIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_logout"
+            app:tint="@color/btn_dark"/>
+
+        <TextView
+            android:id="@+id/tvLogout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Cerrar sesión"
+            android:textSize="16sp"
+            android:fontFamily="@font/sen_font"
+            android:textColor="@color/black"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/ivArrow5"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_arrow_right" />
+    </LinearLayout>
+
+
 
 </LinearLayout>
