--- a/app/src/main/res/layout/activity_super_admin_selection.xml
+++ b/app/src/main/res/layout/activity_super_admin_selection.xml
@@ -10,47 +10,50 @@
     tools:context=".activity.superadmin.SuperAdminSelectionActivity">
 
 
-    <!-- Top Bar -->
-    <LinearLayout
+    <!-- Header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp"
-        android:gravity="center_vertical">
+        android:padding="12dp">
 
-        <!-- Botón de regresar (flecha) -->
         <Button
             android:id="@+id/btnBack"
             style="?attr/materialIconButtonFilledTonalStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/btnBack"
             app:icon="@drawable/baseline_arrow_back_ios_new_24"
-            app:iconTint="@color/black"
-            android:backgroundTint="@color/bg_color"/>
+            android:contentDescription="@string/btnBack"
+            android:backgroundTint="@color/bg_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gestión administrativa"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/sen_font"
-            android:padding="8dp"/>
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/sen_font"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Opciones adminitrativas -->
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="60dp">
 
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="12dp">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/btnRestaurantes"
