--- a/app/src/main/res/layout/activity_super_admin_solicitudes_repartidor.xml
+++ b/app/src/main/res/layout/activity_super_admin_solicitudes_repartidor.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/bg_color"
-    tools:context=".activity.superadmin.SuperAdminGestionUsuariosActivity">
+    tools:context=".activity.superadmin.SuperAdminSolicitudesRepartidorActivity">
 
     <!-- Header -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Gestión de clientes"
+            android:text="Solicitud de repartidores"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,26 +53,24 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <!-- Barra de búsqueda -->
     <androidx.appcompat.widget.SearchView
-        android:id="@+id/svClientes"
+        android:id="@+id/svRepartidores"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:layout_marginHorizontal="16dp"
-        app:queryHint="Buscar clientes"
+        app:queryHint="Buscar solicitud"
         app:iconifiedByDefault="false"
         android:background="@drawable/search_view_bg"/>
 
-
+    <!-- Listado de solicitudes -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvUsers"
+        android:id="@+id/rvSolicitudes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:paddingHorizontal="16dp"
-        tools:listitem="@layout/item_user" />
-
+        android:paddingHorizontal="10dp"
+        tools:listitem="@layout/item_soli_repartidor" />
 </LinearLayout>
