--- a/app/src/main/res/layout/item_soli_repartidor.xml
+++ b/app/src/main/res/layout/item_soli_repartidor.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,6 +15,7 @@
         android:paddingHorizontal="12dp"
         android:paddingVertical="16dp"
         android:gravity="center_vertical">
+
         <ImageView
             android:id="@+id/ivUserPhoto"
             android:layout_width="40dp"
@@ -26,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -47,14 +49,28 @@
                 android:textSize="14sp" />
         </LinearLayout>
 
-
-        <!-- Switch -->
-        <com.google.android.material.materialswitch.MaterialSwitch
-            android:id="@+id/swUserActive"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:thumbTint="@color/thumb_tint"
-            app:trackTint="@color/track_tint"/>
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/btnAccept"
+                style="?attr/materialIconButtonFilledStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Aceptar"
+                app:icon="@drawable/ic_check"
+                android:backgroundTint="@color/success"/>
+
+            <Button
+                android:id="@+id/btnDeny"
+                style="?attr/materialIconButtonFilledStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="Denegar"
+                app:icon="@drawable/ic_close"
+                android:backgroundTint="@color/crimson"/>
+        </LinearLayout>
     </LinearLayout>
 
     <!-- Divisor entre ítems -->
